--- a/BITE_353_[Practice_Notebook]_AfterWork_Introduction_to_Python_Programming_Course.ipynb
+++ b/BITE_353_[Practice_Notebook]_AfterWork_Introduction_to_Python_Programming_Course.ipynb
@@ -94,22 +94,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "41aoUo8KLxnG"
-      },
-      "outputs": [],
-      "source": [
-        "# Creating variables of different data types\n",
-        "number = 10\n",
-        "decimal = 3.14\n",
-        "text = \"Hello, World!\"\n",
-        "is_true = True\n",
-        "my_list = [1, 2, 3, 4, 5]"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "**Explanation**: We create variables of different data types: an integer, a string, a boolean, and a list. We then print out each variable to display their values. The output will be: 10 John True [85, 90, 88]\n",
@@ -752,13 +736,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c7dff7a0-b470-4ba4-fdf1-06a68a1dc3fb"
+        "outputId": "9b68552a-377c-43e6-dfcf-7074b92f6188"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "4\n",
             "125\n"
