--- a/BITE_353_[Practice_Notebook]_AfterWork_Introduction_to_Python_Programming_Course.ipynb
+++ b/BITE_353_[Practice_Notebook]_AfterWork_Introduction_to_Python_Programming_Course.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "collapsed_sections": [
         "AQwBkaE7ObYb",
         "i-lJZS6hObYc",
@@ -92,6 +91,22 @@
       "metadata": {
         "id": "Jtm5X8RoU9mp"
       }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "41aoUo8KLxnG"
+      },
+      "outputs": [],
+      "source": [
+        "# Creating variables of different data types\n",
+        "number = 10\n",
+        "decimal = 3.14\n",
+        "text = \"Hello, World!\"\n",
+        "is_true = True\n",
+        "my_list = [1, 2, 3, 4, 5]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -736,16 +751,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b68552a-377c-43e6-dfcf-7074b92f6188"
+        "outputId": "c7dff7a0-b470-4ba4-fdf1-06a68a1dc3fb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "4\n",
             "125\n"
