--- a/BITE_353_[Practice_Notebook]_AfterWork_Introduction_to_Python_Programming_Course.ipynb
+++ b/BITE_353_[Practice_Notebook]_AfterWork_Introduction_to_Python_Programming_Course.ipynb
@@ -1891,11 +1891,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
-        "id": "9pGtjJFNOegy"
+        "id": "9pGtjJFNOegy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e944b611-fd9c-4c7d-943c-421ae9613020"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'orange', 'grapes']\n"
+          ]
+        }
+      ],
       "source": [
         "# Define a list of items in a store\n",
         "store_items = ['apple', 'banana', 'orange', 'grapes']\n",
@@ -1912,10 +1924,25 @@
         "    print(f\"Item: {item}\")"
       ],
       "metadata": {
-        "id": "KdbTJUD-Js8v"
+        "id": "KdbTJUD-Js8v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5e317e63-1fb4-4db8-cfe9-8b9eb8f98e0d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Item: apple\n",
+            "Item: banana\n",
+            "Item: orange\n",
+            "Item: grapes\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1955,17 +1982,29 @@
         "total_cost = 0\n",
         "\n",
         "# Iterate over each item in the store_items list\n",
-        "# Write your code here\n",
-        "\n",
+        "for item in store_items:\n",
+        "    total_cost += 2.50\n",
         "\n",
         "# Print the total cost\n",
-        "# Write your code here\n"
+        "print(\"Total cost of items:\", total_cost)"
       ],
       "metadata": {
-        "id": "4eNtK5cQLQ6F"
+        "id": "4eNtK5cQLQ6F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6340d783-98b6-452e-fce5-c0b0ad6a2ed5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total cost of items: 10.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1988,11 +2027,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
-        "id": "74-tGrLbSY95"
+        "id": "74-tGrLbSY95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bd7aef38-2206-4cd7-e082-1fd18b5afbae"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Checking item: apple\n",
+            "Checking item: banana\n",
+            "Checking item: orange\n",
+            "Checking item: grapes\n",
+            "Found grapes! Exiting loop.\n"
+          ]
+        }
+      ],
       "source": [
         "store_items = [\"apple\", \"banana\", \"orange\", \"grapes\", \"watermelon\"]\n",
         "\n",
@@ -2094,13 +2149,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {
         "id": "CIJlE81YSaPQ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "653b9eb4-1cda-42d5-a362-653f36ceb22b"
+        "outputId": "437866be-dd3b-44d3-d201-008ff6c815ae"
       },
       "outputs": [
         {
@@ -2433,13 +2488,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "id": "vYlXZTnvOhlI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d87a014-632a-455d-b8a8-a747bda02c77"
+        "outputId": "d9ba2040-4319-4d7a-91fe-1d1fd4bed529"
       },
       "outputs": [
         {
@@ -2595,21 +2650,31 @@
       "cell_type": "code",
       "source": [
         "# Importing the math library to use the factorial function\n",
-        "# Write your code here\n",
-        "\n",
+        "import math\n",
         "\n",
         "# Calculating the factorial of 5 using the factorial function from the math library\n",
-        "# Write your code here\n",
-        "\n",
+        "result = math.factorial(5)\n",
         "\n",
         "# Printing the result\n",
-        "# Write your code here\n"
+        "print(result)"
       ],
       "metadata": {
-        "id": "Sxc1e2YaQKd8"
+        "id": "Sxc1e2YaQKd8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1135f5a4-3ac1-4de7-b1ae-4da28c9e409f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n"
+          ]
+        }
+      ]
     }
   ]
 }
