--- a/BITE_353_[Practice_Notebook]_AfterWork_Introduction_to_Python_Programming_Course.ipynb
+++ b/BITE_353_[Practice_Notebook]_AfterWork_Introduction_to_Python_Programming_Course.ipynb
@@ -1409,27 +1409,10 @@
         "store_items[0] = \"kiwi\""
       ],
       "metadata": {
-        "id": "JjWwe5QV6xyX",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 159
-        },
-        "outputId": "85aa7e38-a989-40cb-f3ad-3c8974a36b2c"
+        "id": "JjWwe5QV6xyX"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'tuple' object does not support item assignment",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2092949073.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Updating elements\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstore_items\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"kiwi\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
-          ]
-        }
-      ]
+      "execution_count": 9,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1850,11 +1833,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "74-tGrLbSY95"
+        "id": "74-tGrLbSY95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9bd7a073-9cd2-499f-9aad-9e425e1d8710"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Checking item: apple\n",
+            "Checking item: banana\n",
+            "Checking item: orange\n",
+            "Checking item: grapes\n",
+            "Found grapes! Exiting loop.\n"
+          ]
+        }
+      ],
       "source": [
         "store_items = [\"apple\", \"banana\", \"orange\", \"grapes\", \"watermelon\"]\n",
         "\n",
@@ -2075,13 +2074,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "FjwgGPuvOhlG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "00030fad-a91b-45ca-edc9-a112b09808f4"
+        "outputId": "2354f0c9-b4a1-4233-fa08-e5b0693d9758"
       },
       "outputs": [
         {
@@ -2132,17 +2131,29 @@
       "cell_type": "code",
       "source": [
         "# Define a function named 'display_store_hours' that prints out the store's operating hours\n",
-        "# Write your code here\n",
-        "\n",
+        "def display_store_hours():\n",
+        "    print(\"Store operating hours: 9 AM - 7 PM, Mon-Sat\")\n",
         "\n",
         "# Call the 'display_store_hours' function to print the store's operating hours\n",
-        "# Write your code here\n"
+        "display_store_hours()"
       ],
       "metadata": {
-        "id": "FRJWGz80PL7e"
+        "id": "FRJWGz80PL7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d407a5f0-611e-4756-ba90-5a2dc139b086"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Store operating hours: 9 AM - 7 PM, Mon-Sat\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2261,13 +2272,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "vYlXZTnvOhlI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d87a014-632a-455d-b8a8-a747bda02c77"
+        "outputId": "389aea15-8977-4de5-ae8b-90c1c2359d9e"
       },
       "outputs": [
         {
@@ -2362,13 +2373,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "KfSrtir9Pnpg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d96dfa0-a2b5-4748-bc44-5ec12cf11899"
+        "outputId": "8288ca71-8358-4b91-8899-dbf9dcb87111"
       },
       "outputs": [
         {
@@ -2423,21 +2434,31 @@
       "cell_type": "code",
       "source": [
         "# Importing the math library to use the factorial function\n",
-        "# Write your code here\n",
-        "\n",
+        "import math\n",
         "\n",
         "# Calculating the factorial of 5 using the factorial function from the math library\n",
-        "# Write your code here\n",
-        "\n",
+        "result = math.factorial(5)\n",
         "\n",
         "# Printing the result\n",
-        "# Write your code here\n"
+        "print(result)"
       ],
       "metadata": {
-        "id": "Sxc1e2YaQKd8"
+        "id": "Sxc1e2YaQKd8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "555bd631-7af1-402c-b9b5-2a39c7cbb72e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n"
+          ]
+        }
+      ]
     }
   ]
 }
